add csrf handler and fix login form and response message